# HaogeMD

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  _test_remark.mjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-export.js  tsconfig.json  vite.config.ts  vitest.config.ts  南下互认基金系统调整方案（终稿）.md
.github/workflows/: release.yml
.trae/: .ignore
.trae/documents/: 2026-04-01-ergemd-design.md  2026-04-01-ergemd-tech-baseline.md  naming-consistency-guide.md
.trae/rules/: anti-hallucination.md  code-style.md  coding-practices.md  context-sync.md  cross-language-constraints.md  dev-code-standards.md  git-commit-message.md  markdown-formatting.md  performance.md  refactoring.md
docs/: ErgeMD-pdr.md  MERMAID_FIX.md  MarkdownSyntaxExample.md  MermaidRuntimeIsolation.md  Obsidian Markdown 语法测试用例.md  PlantUML语法测试文档.md  dev-plan.md  obsidian-floating-toc-technical-analysis.md  oklch-unified-palette.css  重新认识AI.md
docs/experience/: mermaid-webview2-foreignobject-issue.md
scripts/: rename-bundle.js  sync-version.js
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  ClearCache.bat  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fonts.rs  mod.rs  pdf.rs  update.rs  window.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/tests/: path_validation.rs  reveal_command.rs  update_assets.rs  version_compare.rs  word_count.rs
src/components/: Portal.tsx
tests/: setup.ts
(+166 files in other folders)
