[package]
name = "ergemd"
version = "0.3.1"
description = "ErgeMD - A Markdown Reader"
authors = ["ErgeAIA"]
edition = "2021"

[lib]
name = "ergemd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-opener = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
dirs = "6.0.0"
chrono = "0.4.44"
encoding_rs = "0.8.34"
urlencoding = "2"
tokio = { version = "1", features = ["sync"] }
base64 = "0.22.1"
font-enumeration = "0.9"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
